--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 # Core Dependencies
-groq==0.10.0
-python-dotenv==1.0.0
+groq>=0.10.0,<1.0.0
+httpx>=0.24.0,<1.0.0
+python-dotenv>=1.0.0,<2.0.0
 
 # Optional but recommended for better system info
-psutil==6.0.0
+psutil>=6.0.0,<7.0.0
 
 # Development dependencies (optional)
-# pytest==8.0.0
-# pytest-cov==4.1.0
-# black==24.1.1
-# pylint==3.0.0
+# pytest>=8.0.0
+# pytest-cov>=4.1.0
+# black>=24.1.1
+# pylint>=3.0.0
