--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,15 @@ groq>=0.10.0,<1.0.0
 httpx>=0.24.0,<1.0.0
 python-dotenv>=1.0.0,<2.0.0
 
+# Web Scraping & Search
+ddgs>=4.0.0
+trafilatura>=1.6.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+
+# Printing support (Windows)
+pywin32>=306
+
 # Optional but recommended for better system info
 psutil>=6.0.0,<7.0.0
 
