--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# LLM Models (large files)
+*.gguf
+DeepSeek-R1-Distill-Qwen-1.5B-Q8_0.gguf
